--- a/Lab03/Lab03/MainWindow.xaml
+++ b/Lab03/Lab03/MainWindow.xaml
@@ -8,6 +8,6 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <Button Content="Add New Patient" HorizontalAlignment="Left" Margin="214,103,0,0" VerticalAlignment="Top" Height="39" Width="127" Click="RedirectToPatientForm_Click"/>
-        <Button Content="Patient List" HorizontalAlignment="Left" Margin="458,103,0,0" VerticalAlignment="Top" Height="39" Width="127" />
+        <Button Content="Patient List" HorizontalAlignment="Left" Margin="458,103,0,0" VerticalAlignment="Top" Height="39" Width="127" Click="RedirectToPatientList_Click"/>
     </Grid>
 </Window>
